[package]
name = "hestia-ai-cli"
version.workspace = true
edition.workspace = true

[dependencies]
conductor-sdk.workspace = true
hestia-ai-conductor = { path = "../../conductors/hestia-ai-conductor" }
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing-subscriber = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"