[package]
name = "hestia-apps-cli"
version.workspace = true
edition.workspace = true

[dependencies]
conductor-sdk.workspace = true
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }