[package]
name = "hestia-fpga-cli"
version.workspace = true
edition.workspace = true

[dependencies]
conductor-sdk.workspace = true
hestia-fpga-conductor = { path = "../../conductors/hestia-fpga-conductor" }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }