[package]
name = "hestia-asic-conductor"
version.workspace = true
edition.workspace = true

[dependencies]
asic-conductor-core = { path = "crates/conductor-core" }
asic-project-model = { path = "crates/project-model" }
asic-plugin-registry = { path = "crates/plugin-registry" }
adapter-openlane = { path = "crates/adapter-openlane" }
adapter-yosys = { path = "crates/adapter-yosys" }
pdk-manager = { path = "crates/pdk-manager" }
conductor-sdk.workspace = true
adapter-core.workspace = true
project-model.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing-subscriber = { workspace = true }