[package]
name = "ip-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
conductor-sdk = { path = "../../crates/conductor-sdk" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
petgraph = { workspace = true }
semver = "1"