[package]
name = "conductor-client"
version.workspace = true
edition.workspace = true

[dependencies]
conductor-sdk = { path = "../../../../crates/conductor-sdk" }
tokio.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }