[package]
name = "multi-agent"
version.workspace = true
edition.workspace = true

[dependencies]
conductor-sdk = { path = "../../../../crates/conductor-sdk" }
tokio.workspace = true
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }