[package]
name = "skill-system"
version = "0.1.0"
edition = "2021"

[dependencies]
conductor-sdk = { path = "../../../../crates/conductor-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
