[package]
name = "spec-driven"
version = "0.1.0"
edition = "2021"

[dependencies]
conductor-sdk = { path = "../../../../crates/conductor-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
