[package]
name = "upgrade-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
conductor-sdk = { path = "../../../../crates/conductor-sdk" }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
