[package]
name = "workflow-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
conductor-sdk = { path = "../../../../crates/conductor-sdk" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "1"
petgraph = "0.6"
sled = "0.34"
minijinja = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
