[package]
name = "asic-conductor-core"
version.workspace = true
edition.workspace = true

[dependencies]
conductor-sdk = { path = "../../../../crates/conductor-sdk" }
adapter-core = { path = "../../../../crates/adapter-core" }
asic-project-model = { path = "../project-model" }
asic-plugin-registry = { path = "../plugin-registry" }
tokio.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }